# georeferencer

./: .gitattributes  .gitignore  pyproject.toml  requirements.txt
LoFTR_map_georeferencer/: Loftr_test.ipynb.ipynb  SUPERGLUE_README.md  bildbearbeitung.ipynb  superglue_color_optimization.ipynb  superglue_test.ipynb
LoFTR_map_georeferencer/output/: bplan_georef.tif
bplan_georeferencer/: test.ipynb
data/: bplan.gpkg
