[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georeferencer-superglue"
version = "0.1.0"
description = "Local SuperGlue modules used by georeferencer notebooks."
readme = "LoFTR_map_georeferencer/SUPERGLUE_README.md"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["LoFTR_map_georeferencer"]
include = ["SuperGlue_model*"]

[tool.setuptools.package-data]
SuperGlue_model = ["weights/*.pth"]
"SuperGlue_model.models" = ["weights/*.pth"]
