[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georeferenzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "rasterio",
    "matplotlib",
    "Pillow",
    "PyMuPDF",
    "opencv-python",
    "torch",
    "torchvision",
    "kornia",
    "ipykernel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["LoFTR_map_georeferencer"]
include = ["SuperGlue_model*"]

[tool.setuptools.package-data]
SuperGlue_model = ["weights/*.pth"]
"SuperGlue_model.models" = ["weights/*.pth"]
